--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -45,6 +45,10 @@ html, body {
   }
 }
 
+#map-action-holder, #map-holder {
+  margin-top: 24px !important;
+}
+
 .steps {
   padding-top: 0px !important;
 }
